# helios-client

./: LICENSE  README.md
helios-client/: CMakeLists.txt
helios-client/apicalls/: CMakeLists.txt
helios-client/apicalls/inc/private/: acceptfilecall.h  acceptkeycall.h  apicall.h  apicallvisitor.h  apicallvisitor.tpp  begindownloadcall.h  beginuploadcall.h  checktokencall.h  createdirectorycall.h  dismissallnotificationscall.h  dismissnotificationcall.h  downloadcall.h  endtransfercall.h  fileapicallerimpl.h  getfilesizecall.h  getuserkeycall.h  isdircall.h  listcall.h  logincall.h  logoutcall.h  movecall.h  notificationsapicallerimpl.h  notificationscall.h  registerusercall.h  removecall.h  setuserkeycall.h  sharecall.h  sharekeycall.h  uploadcall.h  userapicallerimpl.h
helios-client/apicalls/inc/public/: apicalldefs.h  apicallstatus.h  fileapicaller.h  notificationsapicaller.h  userapicaller.h
helios-client/apicalls/src/: acceptfilecall.cpp  acceptkeycall.cpp  apicallvisitor.cpp  begindownloadcall.cpp  beginuploadcall.cpp  checktokencall.cpp  createdirectorycall.cpp  dismissallnotificationscall.cpp  dismissnotificationcall.cpp  downloadcall.cpp  endtransfercall.cpp  fileapicallerimpl.cpp  getfilesizecall.cpp  getuserkeycall.cpp  isdircall.cpp  listcall.cpp  logincall.cpp  logoutcall.cpp  movecall.cpp  notificationsapicallerimpl.cpp  notificationscall.cpp  registerusercall.cpp  removecall.cpp  setuserkeycall.cpp  sharecall.cpp  sharekeycall.cpp  uploadcall.cpp  userapicallerimpl.cpp
helios-client/async/: CMakeLists.txt
helios-client/async/inc/: autoresetevent.h  customactionevent.h  executor.tpp  manualresetevent.h  timer.h
helios-client/async/src/: customactionevent.cpp  timer.cpp
helios-client/cmake/: compiler_options.cmake  qt_configuration.cmake  rpath_config.cmake
helios-client/config/: CMakeLists.txt  config.json
helios-client/config/inc/private/: configimpl.h
helios-client/config/inc/public/: config.h  configkeys.h
helios-client/config/src/: configimpl.cpp
helios-client/controllers/: CMakeLists.txt
helios-client/controllers/inc/private/: qauthenticationcontrollerimpl.h  qkeystoragecontrollerimpl.h  qnotificationscontrollerimpl.h  qremotefilesystemcontrollerimpl.h  qsettingscontrollerimpl.h
helios-client/controllers/inc/public/: controllers.h  qauthenticationcontroller.h  qkeystoragecontroller.h  qnotificationscontroller.h  qremotefilesystemcontroller.h  qsettingscontroller.h
helios-client/controllers/src/: controllers.cpp  qauthenticationcontroller.cpp  qauthenticationcontrollerimpl.cpp  qkeystoragecontroller.cpp  qkeystoragecontrollerimpl.cpp  qnotificationscontroller.cpp  qnotificationscontrollerimpl.cpp  qremotefilesystemcontroller.cpp  qremotefilesystemcontrollerimpl.cpp  qsettingscontroller.cpp  qsettingscontrollerimpl.cpp
helios-client/crypto/: CMakeLists.txt
helios-client/crypto/inc/: aes128blockdecryptionwork.h  aes128blockencryptionwork.h  aes128blockwork.h  aes128defs.h  aes128tables.h
helios-client/crypto/inc/private/: cipherfactoryimpl.h  randomfactoryimpl.h  rsaimpl.h
helios-client/crypto/inc/public/: cipher.h  cipherfactory.h  random.h  randomfactory.h  rsa.h  rsautilities.h
helios-client/crypto/src/: aes128blockdecryptionwork.cpp  aes128blockencryptionwork.cpp  aes128blockwork.cpp  cipherfactoryimpl.cpp  randomfactoryimpl.cpp  rsaimpl.cpp
helios-client/crypto/src/aes/: aescipher.cpp  decryptionwork.cpp  encryptionwork.cpp  work.cpp
helios-client/crypto/src/isaac/: isaac64.c  isaac64wrapper.cpp
helios-client/crypto/src/misc/: bigintegeralgorithmsextended.cpp
helios-client/helios/: CMakeLists.txt
helios-client/helios/inc/: paths.h
helios-client/helios/src/: main.cpp
helios-client/http/: CMakeLists.txt
helios-client/http/inc/private/: formdatarequestimpl.h  httpreplylistener.h  (+6 more)
helios-client/http/src/: formdatarequestimpl.cpp  httpreplylistener.cpp  httprequestfactoryimpl.cpp  httprequestmanagerimpl.cpp  qhttprequestmanagerimpl.cpp  urlencodedrequestimpl.cpp
helios-client/keystorage/: CMakeLists.txt
helios-client/keystorage/src/: key.cpp  keymanagerimpl.cpp
helios-client/models/: CMakeLists.txt
helios-client/models/inc/: file.h  filetransfer.h  notification.h  useraccount.h  usersession.h
helios-client/models/src/: file.cpp  filetransfer.cpp  notification.cpp  useraccount.cpp  usersession.cpp
helios-client/qml/: ApplicationWorkflow.qml  CMakeLists.txt  DarkModeStyle.qml  HButton.qml  HCheckBox.qml  HLabel.qml  HTextInput.qml  LoginScreen.qml  MainScreen.qml  NotificationsScreen.qml  RegisterScreen.qml  Style.qml  main.qml
helios-client/qtmodels/: CMakeLists.txt
helios-client/qtmodels/inc/: qfilelisting.h  qfiletransfer.h  qheliosfile.h  qnotification.h  qtmodels.h  qtransferslist.h  quseraccount.h  qusersession.h
helios-client/qtmodels/src/: qfilelisting.cpp  qfiletransfer.cpp  qheliosfile.cpp  qnotification.cpp  qtmodels.cpp  qtransferslist.cpp  quseraccount.cpp  qusersession.cpp
helios-client/server/: CMakeLists.txt
helios-client/services/: CMakeLists.txt
helios-client/services/src/: authenticatedservice.cpp  fileserviceimpl.cpp  keyexchangeserviceimpl.cpp  notificationserviceimpl.cpp  userserviceimpl.cpp
helios-client/settings/: CMakeLists.txt  default_settings.json
helios-client/settings/src/: defaultsettingsproviderimpl.cpp  settingsmanagerimpl.cpp
helios-client/testapp/: CMakeLists.txt  main.cpp
helios-client/tests/: CMakeLists.txt
helios-client/tests/inc/: testapplication.h
helios-client/tests/integrationtests/: CMakeLists.txt
helios-client/tests/src/: testapplication.cpp
helios-client/tests/unittests/: CMakeLists.txt
helios-client/utils/: CMakeLists.txt
helios-client/utils/inc/: asyncnotifier.h  asyncnotifier.tpp  bigintegeralgorithmsextended.h  dependencyinjector.h  dependencyinjector.tpp  executor.h  misc.h  observable.h  paths.h  pathutils.h  single.h  typeconversions.h  typeutils.h
helios-client/utils/src/: asyncnotifier.cpp  autoresetevent.cpp  bigintegeralgorithmsextended.cpp  dependencyinjector.cpp  executor.cpp  manualresetevent.cpp  pathutils.cpp
(+58 files in other folders)
